--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,9 +1,10 @@
 .ImageSection{
     display: flex;
     margin-top: 4rem;
+    margin-bottom: 4rem;
 
     .img{
-        height: 50vh;
+        height: 60vh;
         img{
             width: 100%;
             object-fit: cover;
@@ -45,7 +46,7 @@
       letter-spacing: 2px;
       margin-top: 1rem;
       position: relative;
-      transition: all 0.4s ease-in-out;
+      
       &::after{
           position:absolute;
           content: "";
@@ -54,6 +55,7 @@
           left: 0;
           bottom: 0;
           background-color: red;
+          transition: all 0.4s ease-in-out;
           }
           &:hover::after{
             width: 100%;
