--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -4,7 +4,7 @@
     margin-bottom: 4rem;
 
     .img{
-        height: 60vh;
+        height: 100vh;
         img{
             width: 100%;
             object-fit: cover;
@@ -60,5 +60,9 @@
           &:hover::after{
             width: 100%;
       }
-
   }
+
+        .skills-container{
+            display:grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
