--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,23 @@
-@import './styles/about';
-@import './styles/layout';
-@import './styles/typography';
-@import './styles/navbar';
-@import './styles/skill';
-@import './styles/title';
+@import "./styles/about";
+@import "./styles/layout";
+@import "./styles/typography";
+@import "./styles/navbar";
+@import "./styles/skill";
+@import "./styles/services";
+@import "./styles/title";
 
-*{
-    padding:0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-body{
-    color: #a4acc4;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-    font-size: 1.2rem;
+body {
+	color: #a4acc4;
+	font-family: "M PLUS Rounded 1c", sans-serif;
+	font-size: 1.2rem;
 }
 
-span{
-    color:#037FFF
+span {
+	color: #037fff;
 }
