--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./styles/about";
 @import "./styles/layout";
+@import "./styles/contact";
 @import "./styles/typography";
 @import "./styles/navbar";
 @import "./styles/skill";
@@ -11,6 +12,16 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+body::-webkit-scrollbar {
+	width: 8px;
+}
+body::-webkit-scrollbar-thumb {
+	background-color: #0056d898;
+	border-radius: 50px;
+}
+body::-webkit-scrollbar-track {
+	background-color: #777;
+}
 
 body {
 	color: #a4acc4;
@@ -20,4 +31,23 @@ body {
 
 span {
 	color: #037fff;
+}
+
+@media screen and (max-width: 411px) {
+	html {
+		font-size: 70%;
+	}
+}
+@media screen and (max-width: 700px) {
+	html {
+		font-size: 90%;
+	}
+}
+@media screen and (max-width: 480px) {
+	h2 {
+		font-size: 70%;
+	}
+	h3 {
+		font-size: 70%;
+	}
 }
