--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -7,11 +7,20 @@
 		height: 50vh;
 		img {
 			width: 100%;
-			object-fit: cover;
+			object-fit: scale-down;
 			height: 100%;
 		}
 	}
 
+	.about-info {
+		margin-left: 2rem;
+		h4 {
+			font-size: 2rem;
+		}
+		.about-text {
+			padding: 1rem 0;
+		}
+	}
 	@media screen and (max-width: 1400px) {
 		flex-direction: column;
 		.about-info {
@@ -67,5 +76,44 @@
 	margin: 4rem 0;
 	@media screen and (max-width: 1100px) {
 		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+.btn-port {
+	padding: 0.6rem 2rem;
+	background-color: #0381ff5b;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	font-size: inherit;
+	font-family: inherit;
+	color: white;
+	margin-bottom: 1rem;
+	transition: all 0.3s ease-in-out;
+	&:not(:last-child) {
+		margin-right: 1rem;
+	}
+	&:hover {
+		background-color: #037fff;
+	}
+	&:active {
+		background-color: #037fff;
+	}
+	&:focus {
+		background-color: #037fff;
+	}
+}
+
+.buttons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 4rem 10rem;
+	flex-wrap: wrap;
+	@media screen and (max-width: 1270px) {
+		margin: 2rem 5rem;
+	}
+	@media screen and (max-width: 1100px) {
+		margin: 2rem 2rem;
 	}
 }
